src/sack/styles.css
/* ===================================================================== */

Screen {
    align: center middle;
}

/* ===================================================================== */

SackHeader {
    #header {
        text-align: center;
        hatch: left $secondary;
        width: 70;
        max-width: 80%;
    }
    Static {
        width: 1fr;
    }
}

#options {
    margin-top: 5;

    MenuOption {
        width: 70;
        max-width: 40%;
        margin-bottom: 1;
        .shortcut {
            dock: right;
            border-right: outer $secondary;
        }
    }
}

/* ===================================================================== */

#form {
    width: 60;
    border: solid $boost;
    padding: 1;

    & * {
        max-width: 60;
    }

    .form-title {
        margin-bottom: 2;
        text-style: bold;
        margin-left: 2;
    }

    .form-error {
        color: $error;
        margin-bottom: 2;
        margin-left: 2;
    }

    .form-label {
        color: $foreground-muted;
    }

    .form-field {
        height: 4;
        width: 30;
        padding-left: 1;
        border: solid $boost;

        &:focus-within {
            border: solid $secondary 50%;
        }
    }

    Input {
        background: $background !important;

        &:focus {
            background-tint: $background 0%;
        }
        &.-textual-compact {
            &.-invalid {
                background-tint: $error 0%;
            }
        }
    }

    Select {
        SelectOverlay{
            background: $background !important;
        } 
        SelectCurrent {
                background: $background !important;
        }
        &:focus > SelectCurrent {
            background-tint: $foreground 0%;
        }
    }

    Button {
        margin-top: 2;
        background: $background;
        text-style: none;
        border: solid $boost;

        &:focus {
            background: $background !important;
            border: solid $secondary 50%;
            background-tint: $foreground 0%;
            text-style: bold;
        }
    }
}

/* ===================================================================== */

#chat {
    min-width: 35%;
    width: 75;
    max-width: 95%;
}

#chat-header {
    width: 100%;
    height: 2;
    border-bottom: solid $boost;

}

#messages {
    scrollbar-size-vertical: 0;

    .notification {
        height: auto;
        color: $foreground-muted;
        text-align: center;
        align: center middle;
        width: 100%;
        margin-bottom: 1;
    }

    ChatMessage {
        height: auto;

        .msg {
            width: auto;
            max-width: 70w;
            height: auto;
            max-height: 50;
            padding: 1 2 1 2;
            outline: solid $boost;
        }

        .msg-text {
            text-overflow: fold;
            max-width: 100%;
        }

        .msg-author {
            color: $foreground-muted;
        }

        &.right {
            align: right middle;
            
            .msg {
                outline-right: solid $secondary;
            }
        }
    }
}

#prompt-char {
    color: $secondary;
}

#input-wrapper {
    border: solid $boost;
}

TextInput {
    height: auto;
    max-height: 8;
    background: $background;

    .text-area--cursor-line {
        background: $background;
    }
}

/* ===================================================================== */

.modal {
    background: $background;
    border: solid white 10%;
    height: auto;
    width: 40;
    padding: 1;

    .modal-title {
        margin-bottom: 1;
        text-style: bold;
    }
}

.help-label{
    width: 100%;
    .help-keys {
        width: 15;
        text-align: right;
        padding-right: 2;
        color: $secondary;
    }
    .help-desc {
        width: 1fr;
        text-align: left;
    }
    &.help-header {
        text-style: bold;
        .help-keys {
            color: $text;
        }
    }
}

ThemeOption {
    .theme-arrow {
        color: $background;
        margin-left: 2;
        margin-right: 1;
    }
    &:focus-within {
        .theme-name {
            color: $secondary;
        }
        .theme-arrow {
            color: $text;
        }
    }

    Input {
        height: 0;
        width: 0;
        padding: 0;
        margin: 0;
        border: none;
    }
}
/* ===================================================================== */

